Element spacing and underline fix. Hover actions for nav icons.

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -511,29 +511,13 @@ body {
     color: inherit;
     text-decoration: none;
 }
-.content h1 a:hover,
-.content .h1 a:hover,
-.content h2 a:hover,
-.content h3 a:hover,
-.content h4 a:hover,
-.content h5 a:hover,
-.content h6 a:hover {
-    background-image: linear-gradient(transparent, transparent 6px, #d480aa 6px, #d480aa);
-    background-position: bottom;
-    background-size: 100% 6px;
-    background-repeat: repeat-x;
-}
+
 .content h6 a {
     background: none;
     color: inherit;
     text-decoration: none;
 }
-.content h6 a:hover {
-    background-image: linear-gradient(transparent, transparent 6px, #d480aa 6px, #d480aa);
-    background-position: bottom;
-    background-size: 100% 6px;
-    background-repeat: repeat-x;
-}
+
 @media (min-width: 540px) {
     .image-wrap {
         flex-direction: row;
@@ -1165,31 +1149,6 @@ article .content .caption {
     text-transform: none;
     font-size: 1.5em;
     line-height: 1.25;
-}
-.article-tag .tag-link {
-    background-image: linear-gradient(transparent, transparent 10px, #d480aa 10px, #d480aa);
-    background-position: bottom;
-    background-size: 100% 6px;
-    background-repeat: repeat-x;
-}
-.article-tag .tag-link:before {
-    content: "#";
-}
-.article-category .category-link {
-    background-image: linear-gradient(transparent, transparent 10px, #d480aa 10px, #d480aa);
-    background-position: bottom;
-    background-size: 100% 6px;
-    background-repeat: repeat-x;
-}
-@media (min-width: 480px) {
-    .article-tag,
-    .article-category {
-        display: inline;
-    }
-    .article-tag:before,
-    .article-category:before {
-        content: "|";
-    }
 }
 #archive .post-list {
     padding: 0;
